# rum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
rum/: CMakeLists.txt  rum.h
rum/common/: buffer.h  common.cc  common.h  def.h  log.cc  log.h  message.h  misc.cc  misc.h  node_param.h  optional_lock.h  serialization.h  srv_def.h  thread_pool.h  zmq_helper.cc  zmq_helper.h
rum/core/: README.md  client_base_handler.cc  client_base_handler.h  msg_dispatcher.cc  msg_dispatcher.h  node_base.cc  node_base.h  publisher_base.cc  publisher_base.h  publisher_base_handler.cc  publisher_base_handler.h  server_base_handler.cc  server_base_handler.h  subscriber_base.cc  subscriber_base.h  subscriber_base_handler.cc  subscriber_base_handler.h
rum/core/internal/: awaiting_result.h  client_base_impl.cc  client_base_impl.h  intra_proc_manager.cc  intra_proc_manager.h  itc_manager.cc  itc_manager.h  master.cc  master.h  node_base_impl.cc  node_base_impl.h  node_id.h  node_info.cc  node_info.h  publisher_base_impl.cc  publisher_base_impl.h  remote_manager.cc  remote_manager.h  server_base.cc  server_base.h  server_base_impl.cc  server_base_impl.h  socket_monitor.cc  socket_monitor.h  srv_common.h  sub_container.cc  sub_container.h  subscriber_base_impl.cc  subscriber_base_impl.h
rum/core/msg/: rum_common.fbs  rum_common_generated.h  rum_header.fbs  rum_header_generated.h  rum_sync.fbs  rum_sync_generated.h  util.h
rum/cpprum/: README.md  client.h  node.h  publisher.h  publisher_handler.h  rum.h  server.h  subscriber.h  subscriber_handler.h
rum/cpprum/serialization/: serializer.h
rum/cpprum/serialization/boost/: serializer_boost.h
rum/cpprum/serialization/flatbuffers/: serializer_fbs.h
rum/cpprum/serialization/native/: autoserialize.h  common_types.h  handwritten.h  serializer_native.h
rum/cpprum/serialization/native/extend/: cv_types.h  eigen_types.h
rum/cpprum/serialization/protobuf/: serializer_proto.h
rum/extra/assembly/: CMakeLists.txt  README.md  component.h  component_loader.cc  component_loader.h  main.cc
rum/extra/assembly/demo/: compoent_pub.cc  component_sub.cc  message.h
rum/rum/: node.h  publisher.h  subscriber.h
rum/serialization/: serializer.h
rum/serialization/flatbuffers/: serializer_fbs.h
rum/serialization/native/: autoserialize.h  common_types.h  handwritten.h  serializer_native.h
rum/serialization/protobuf/: serializer_proto.h
rum/test/: CMakeLists.txt  discovery_raw.cc  publish.cc  zmq.cc
rum/test/bench/: CMakeLists.txt  README.md  ros_pingpong.h  ros_pingpong_bench.cc  ros_pingpong_bench2.cc  ros_pingpong_bench2_comp.cc  rum_pingpong.h  rum_pingpong_bench.cc  rum_pingpong_bench2.cc  rum_pingpong_bench2_comp.cc  zmq_bench.cc
rum/test/core/: master_test.cc  node_test.cc  srv_test.cc  topic_test.cc  topic_test_companion.cc
rum/test/cpprum/: srv_test.cc  srv_test_common.h  srv_test_companion.cc  topic_test.cc  topic_test_companion.cc
rum/test/dumb/: CMakeLists.txt  native_msg.h  simple_node_1.cc  simple_node_2.cc  sptr.cc  trivially_copyable.cc  universal_ser.cc  universal_ser_crtp.cc  zmq_pubsub.cc  zmq_r2r.cc
rum/test/serialization/: ser_fb_test.cc  ser_io_test.cc  ser_native_test.cc  ser_protobuf_test.cc  ser_protobuf_test_companion.cc  serialization_test.cc
rum/test/serialization/native_extend/: CMakeLists.txt  ser_native_cv_test.cc  ser_native_eigen_test.cc
rum/test/test_msg/: test_image.fbs  test_image_generated.h  test_native_message.h  test_number.fbs  test_number_generated.h
rum/test/test_msg/flatbuffers/: build.sh  test_image_generated.h  test_point.fbs  test_point_generated.h
rum/test/test_msg/native/: test_native_message.h
rum/test/test_msg/protobuf/: build.sh  test_number.pb.cc  test_number.pb.h  test_number.proto
rum/test/test_utils/: process_utils.h
